2011-01-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Blame minor mode accept changings.

2010-12-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: a lot of commit buffer problem

2010-12-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Delete: Unsupport Emacs 22 officially.

2010-12-17  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-vc-commit-non-query-message

2010-11-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.8

2010-11-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-vc-commit-non-query

2010-10-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-browse-smart-move-this bound to `C-c C-b C-m'
	* Add: fsvn-browse-smart-copy-this bound to `C-c C-b C-c'

2010-10-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: @ stated filename.

	* Fix: speed up windows process.

2010-10-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: check unsaved buffer in interactive read

	* Change: message-edit-mode and file-select-mode can create multiple buffers.

	* Change: fsvn-flatten-command-args -> fsvn-command-args-canonicalize

2010-10-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.7

2010-10-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: expire temp files 2 days -> 5 days

	* Change: expire ediff files

2010-10-07  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-svnsync-command-internal

	* Improvement: fsvn-merged-import-with-log accept local destination.

	* Add: easymenu (message-edit, popup, process-list)

2010-10-06  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-command-error promote to error-condition

	* Change: fsvn-file-name-as-repository -> fsvn-directory-name-as-repository

2010-10-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: fsvn-popup-copy-process-sentinel -> fsvn-popup-copy/move-process-sentinel
