@@ -7,7 +7,7 @@
 (setq fsvn-svn-command "svn")
 (setq fsvn-svnadmin-command "svnadmin")
 
-(setq INSTALL-DIR (expand-file-name "../share/site-lisp/fsvn" (invocation-directory)))
+(setq INSTALL-DIR (expand-file-name "../share/emacs/site-lisp/fsvn" (invocation-directory)))
 
 
 ;; (setq load-path (cons "~/some/directory" load-path))
