@@ -1,5 +1,5 @@
 ;;; fsvn.el --- Functional Subversion interface for emacs
-;; Copyright (C) 2008-2010 by Masahiro Hayashi
+;; Copyright (C) 2008-2011 by Hayashi Masahiro
 
 ;; Author: Hayashi Masahiro <mhayashi1120@gmail.com>
 ;; URL: http://fsvn.sourceforge.jp/
@@ -37,7 +37,7 @@
 ;;  * Has svk support
 
 ;;  But following **disadvantage** has.
-;;  * Key bindings is not friendly for legacy user.
+;;  * Key bindings is not familiar for legacy user.
 ;;  * Dired like interface but not exactly equals dired functions.
 ;;  * A little user help.
 
@@ -45,101 +45,6 @@
 ;;      NTEmacs (based Emacs 23.1) on Windows.  svn 1.5.x - 1.7.x
 ;;      Emacs (23.2) on GNU/Linux (Debian).  svn svn 1.5.x - 1.7.x
 ;;      Emacs current (24.0.50) on GNU/Linux (Debian).  svn 1.5.x - 1.7.x
-
-;; major-mode and brief description
-;; * fsvn-browse-mode (dired like interface)
-;; * fsvn-select-file-mode (Select multiple files)
-;; * fsvn-message-edit-mode (Edit log message and commit it)
-;; * fsvn-popup-result-mode (Show svn command output)
-;; * fsvn-proplist-mode (Property list view)
-;; * fsvn-propedit-mode (`fsvn-proplist-mode' subwindow property selected)
-;; * fsvn-log-list-mode (Log list)
-;; * fsvn-log-sibling-mode (`fsvn-log-list-mode' subwindow revision changed file list)
-;; * fsvn-log-message-mode (`fsvn-log-list-mode' subwindow revision log message)
-;; * fsvn-process-list-mode (Process list view)
-
-;; see following repositories
-;; * http://svn.apache.org/repos/asf/subversion/trunk/
-;; * http://tortoisesvn.tigris.org/svn/tortoisesvn/trunk
-;; * http://svn.meadowy.org/Meadow/trunk/
-
-;; NOTE:
-
-;; Q. TODO
-;; A. TODO
-;; (setenv "SVN_SSH" "ssh -q")
-
-;; Q.  How to use in NTEmacs
-;; A.  TODO
-;;    fiber.exe patch
-
-;;; Coding
-
-;; * name definition
-;;   url -+- filename of local directory (e.g. c:/hoge /hoge )
-;;        +- real url (e.g.  svn://* http:// like string)
-;;
-;;   path -+- filename of local directory (e.g. c:/hoge /hoge )
-;;         +- path to repository object.  only directory.  contains first `/'
-;;
-;;   * path is unique in a fsvn-browse-mode buffer.
-;;
-;;
-
-;; * fsvn-xml-* name definition todo not completed
-;;      => : access to children's first node (unique one)
-;;      -> : access to children
-;;      $  : text node.
-;;      .  : attribute node.
-
-;; * Explicit argument MUST be long option.
-
-;; * do not use fsvn-test namespace.
-
-;;; Configuration in dot-emacs
-
-;; 1. Add svn command path to `exec-path' correctly.
-;;    Otherwise set `fsvn-svn-command' `fsvn-svnadmin-command' value by full-path before loading/requiring.
-;; 
-;; (setq fsvn-svn-command "/path/to/svn.exe"
-;;       fsvn-svnadmin-command "/path/to/svnadmin.exe")
-
-;; 2. Sample settings.
-;;  (require 'fsvn)
-;;  (setq fsvn-help-locale "ja")
-;;  (setq fsvn-repository-alist
-;;       '(
-;;      ("svn://localhost"
-;;       )
-;;      ))
-
-;; 3. global key bindings (option)
-;; (global-set-key "\C-xv!" 'fsvn-command)
-;; (global-set-key "\C-xv," 'fsvn-backward-popup-result-buffer)
-;; (global-set-key "\C-xv." 'fsvn-forward-popup-result-buffer)
-;; (global-set-key "\C-xvV" 'fsvn-vc-commit)
-;; (global-set-key "\C-xvG" 'fsvn-blame-minor-mode)
-;; (global-set-key "\C-xvI" 'fsvn-import)
-;; (global-set-key "\C-xvL" 'fsvn-vc-print-log)
-;; (global-set-key "\C-xvO" 'fsvn-checkout)
-;; (global-set-key "\C-xvP" 'fsvn-process-list)
-;; (global-set-key "\C-xvZ" 'fsvn-debug-toggle)
-;; (global-set-key "\C-xv\ec" 'fsvn-global-cleanup-buffer)
-;; (global-set-key "\C-xvN" 'fsvn-vc-commit-non-query)
-
-;;  4. Module dependency
-;;     Independent modules
-;;      * fsvn-env
-;;      * fsvn-debug
-
-;;      browse -> proplist/propedit
-;;      browse -> log
-;;      browse -> file-select
-
-;;      blame-minor
-
-;;; History:
-;;
 
 ;;; Code:
 
@@ -152,6 +57,30 @@
 
 (defvar fsvn-version "0.9.8"
   "Version of fsvn.")
+
+
+
+;;; Configuration in dot-emacs
+
+;; 1. Add svn command path to `exec-path' correctly.
+;;    Otherwise set `fsvn-svn-command' `fsvn-svnadmin-command' value by full-path before loading/requiring.
+;; 
+;; (setq fsvn-svn-command "/path/to/svn.exe"
+;;       fsvn-svnadmin-command "/path/to/svnadmin.exe")
+
+;; 2. global key bindings (option)
+;; (global-set-key "\C-xv!" 'fsvn-command)
+;; (global-set-key "\C-xv," 'fsvn-backward-popup-result-buffer)
+;; (global-set-key "\C-xv." 'fsvn-forward-popup-result-buffer)
+;; (global-set-key "\C-xvV" 'fsvn-vc-commit)
+;; (global-set-key "\C-xvG" 'fsvn-blame-minor-mode)
+;; (global-set-key "\C-xvI" 'fsvn-import)
+;; (global-set-key "\C-xvL" 'fsvn-vc-print-log)
+;; (global-set-key "\C-xvO" 'fsvn-checkout)
+;; (global-set-key "\C-xvP" 'fsvn-process-list)
+;; (global-set-key "\C-xvZ" 'fsvn-debug-toggle)
+;; (global-set-key "\C-xv\ec" 'fsvn-global-cleanup-buffer)
+;; (global-set-key "\C-xvN" 'fsvn-vc-commit-non-query)
 
 
 
